fix: re-upload videos with webm format to test not playing in mobile safari iphone devices;

--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -373,26 +373,32 @@
   <section class="db-section db-section--after-life">
     <div class="db-bg-container">
       <video class="db-bg-video --ds-view"
-        src="https://cdn.shopify.com/videos/c/o/v/0fd629a37bb14ed3a4bd99cd7282ca62.mp4"
+        id=""
+        poster=""
         allow="autoplay"
         preload="auto"
         control="false"
         autoplay="true"
         volume="0"
         playsinline=""
-        muted=""
-        loop="">
+        muted
+        loop>
+        <source type="video/mp4" src="https://cdn.shopify.com/videos/c/o/v/1cac79ecbdf34f89a9bd0ff2cc7949f8.mp4">
+        <source type="video/webm" src="https://cdn.shopify.com/videos/c/o/v/efd06cfd8814456fabdc55f8f021e8b0.webm">
       </video>
       <video class="db-bg-video --mb-view"
-        src="https://cdn.shopify.com/videos/c/o/v/9464a99ba8c14a37b0f6e29137e0861e.mp4"
+        id=""
+        poster=""
         allow="autoplay"
         preload="auto"
         control="false"
         autoplay="true"
         volume="0"
         playsinline=""
-        muted=""
-        loop="">
+        muted
+        loop>
+        <source type="video/mp4" src="https://cdn.shopify.com/videos/c/o/v/81bee5599f164ffaac301c07901a54b2.mp4">
+        <source type="video/webm" src="https://cdn.shopify.com/videos/c/o/v/1d0c7cb90c494424ac02480eb19656b7.webm">
       </video>
     </div>
     <div class="db-container">
@@ -408,26 +414,32 @@
   <section class="db-section db-section--road-map">
     <div class="db-bg-container">
       <video class="db-bg-video --ds-view"
-        src="https://cdn.shopify.com/videos/c/o/v/9c54d118f06d417198dbe0dd9182be2d.mp4"
+        id=""
+        poster=""
         allow="autoplay"
         preload="auto"
         control="false"
         autoplay="true"
         volume="0"
         playsinline=""
-        muted=""
-        loop="">
+        muted
+        loop>
+        <source type="video/mp4" src="https://cdn.shopify.com/videos/c/o/v/b78ddef6d2bf49f09c55593cdc70b5c6.mp4">
+        <source type="video/webm" src="https://cdn.shopify.com/videos/c/o/v/b6c235be28cf497eb5d9ce9980edfcc3.webm">
       </video>
       <video class="db-bg-video --mb-view"
-        src="https://cdn.shopify.com/videos/c/o/v/642a2dae1b26407a904eabd7d019af45.mp4"
+        id=""
+        poster=""
         allow="autoplay"
         preload="auto"
         control="false"
         autoplay="true"
         volume="0"
         playsinline=""
-        muted=""
-        loop="">
+        muted
+        loop>
+        <source type="video/mp4" src="https://cdn.shopify.com/videos/c/o/v/268956f974e940f495d0491a9378527a.mp4">
+        <source type="video/webm" src="https://cdn.shopify.com/videos/c/o/v/7753bcdfea7640c58e460e7d2ea787d3.webm">
       </video>
     </div>
     <div class="db-container">
