--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -223,7 +223,7 @@
                               PROJECT
                             </span>
                             <span>
-                              TEASER
+                              TRAILER
                             </span>
                           </div>
                         </div>
