--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -184,6 +184,7 @@
                           @loadedmetadata="handleLoadedMetaData"
                           @timeupdate="handleTimeUpdate"
                         >
+                          <source src="https://cdn.shopify.com/videos/c/o/v/f29d9162681349ebb6dc586b7f45ce2c.mp4" type="video/mp4" />
                           <source src="https://cdn.shopify.com/videos/c/o/v/f4683eb17abb48c2951f5fdb1f64199e.webm" type="video/webm" />
                         </video>
                       </figure>
