--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -380,6 +380,9 @@
   </section>
 
 </div>
+<script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+<zapier-interfaces-page-embed page-id='clpbajc5z004klc0o3em0khbg' no-background='false'  style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
+
 <script>
   const DB_Page_Home_Options = {
     name: 'DB Page Home Options',
