--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
+    <script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
     <!-- Favicon -->
     <link rel="icon" href="{{ 'DB_favicon.png' | asset_url }}" type="image/x-icon">
 
@@ -24,8 +25,10 @@
       src="{{ 'jquery.js' | asset_url }}"
       async></script>
 
+
     <!-- vue | JS -->
     <script type="text/javascript" src="{{ 'vue.js' | asset_url }}"></script>
+
 
     {% comment %} <script src="https://sdk.scdn.co/spotify-player.js"></script> {% endcomment %}
 
