--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -109,22 +109,6 @@
         {% render 'socials' %}
       </div>
     </div>
- 
-    {% comment %} <figure v-if="isActiveVideo">
-      <video controls preload="metadata" poster="{{ 'Explore-OC__asset-v01-2880x1620.png' | asset_url }}">
-        <source src="https://cdn.shopify.com/videos/c/o/v/f29d9162681349ebb6dc586b7f45ce2c.mp4" type="video/mp4"/>
-      </video>
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="db-svg" @click="toggleVideo">
-        <g clip-path="url(#clip0_3450_283)">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9996 14.1211L17.3026 19.4251C17.584 19.7065 17.9657 19.8646 18.3636 19.8646C18.7616 19.8646 19.1432 19.7065 19.4246 19.4251C19.706 19.1437 19.8641 18.7621 19.8641 18.3641C19.8641 17.9662 19.706 17.5845 19.4246 17.3031L14.1196 12.0001L19.4236 6.69711C19.5629 6.55778 19.6733 6.39238 19.7487 6.21036C19.824 6.02834 19.8628 5.83326 19.8627 5.63626C19.8627 5.43926 19.8238 5.2442 19.7484 5.06221C19.673 4.88022 19.5624 4.71488 19.4231 4.57561C19.2838 4.43634 19.1184 4.32588 18.9364 4.25054C18.7543 4.17519 18.5592 4.13644 18.3623 4.13648C18.1653 4.13653 17.9702 4.17538 17.7882 4.25081C17.6062 4.32624 17.4409 4.43678 17.3016 4.57611L11.9996 9.87911L6.6966 4.57611C6.5583 4.43278 6.39284 4.31843 6.20987 4.23973C6.0269 4.16103 5.83009 4.11956 5.63092 4.11774C5.43176 4.11591 5.23422 4.15377 5.04984 4.22911C4.86546 4.30444 4.69793 4.41574 4.55703 4.55652C4.41612 4.69729 4.30466 4.86471 4.22916 5.04902C4.15365 5.23333 4.1156 5.43083 4.11724 5.63C4.11887 5.82917 4.16016 6.02602 4.23869 6.20906C4.31721 6.3921 4.43141 6.55767 4.5746 6.69611L9.8796 12.0001L4.5756 17.3031C4.29421 17.5845 4.13612 17.9662 4.13612 18.3641C4.13612 18.7621 4.29421 19.1437 4.5756 19.4251C4.857 19.7065 5.23865 19.8646 5.6366 19.8646C6.03456 19.8646 6.41621 19.7065 6.6976 19.4251L11.9996 14.1201V14.1211Z" fill="#CAC7D0"/>
-        </g>
-        <defs>
-        <clipPath id="clip0_3450_283">
-        <rect width="24" height="24" fill="white"/>
-        </clipPath>
-        </defs>
-      </svg>
-    </figure> {% endcomment %}
 
     <div class="db-container">
       <div class="db-row">
@@ -144,6 +128,7 @@
             Get it? Got it? Goose yourself.
           </p>
         </div>
+
         <div class="db-col">
           <div class="db-inner-row">
             <div class="db-inner-col">
@@ -377,17 +362,22 @@
         </div>
       </div>
     </div>
+
+    <div>
+      <zapier-interfaces-page-embed page-id='clpbajc5z004klc0o3em0khbg' no-background="false" style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
+    </div>
+
   </section>
 
 </div>
-<script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
-<zapier-interfaces-page-embed page-id='clpbajc5z004klc0o3em0khbg' no-background='false'  style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
+
 
 <script>
   const DB_Page_Home_Options = {
     name: 'DB Page Home Options',
     data() {
       return {
+        isExist: false,
         windowSize: {
           windowHeight: 0,
           windowWidth: 0,
@@ -1040,5 +1030,8 @@
     }
   };
 
+  
   Vue.createApp(DB_Page_Home_Options).mount('.db-page--home');
+  // console.log(Vue.component);
+
 </script>
