--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-    <script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+    {% comment %} <script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script> {% endcomment %}
     <!-- Favicon -->
     <link rel="icon" href="{{ 'DB_favicon.png' | asset_url }}" type="image/x-icon">
 
