--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -3,6 +3,7 @@
     margin: -45px auto 0;
   }
 </style>
+
 <div class="db-page db-page--home">
 
   {% comment %}
@@ -364,12 +365,15 @@
     </div>
 
     <div>
+      
       <zapier-interfaces-page-embed page-id='clpbajc5z004klc0o3em0khbg' no-background="false" style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
-    </div>
-
+    </div> 
+      
   </section>
-
+      
 </div>
+
+<script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
 
 
 <script>
