--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -1,4 +1,5 @@
 .db-page--home {
+  position: relative;
 
   .spotify-backdrop {
     position: fixed;
@@ -1571,6 +1572,51 @@
       }
     }
 
-    
+   
+  }
+
+  .db-chat-logo {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    max-width: 150px;
+    width: 100%;
+    min-width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 99;
+    background: linear-gradient(180deg, #8D50A0 0%, #B522EB 135.7%);
+    transition: background 200ms ease-in-out 0ms;
+    &:hover {
+      background: linear-gradient(180deg, #7DAA41 0%, #B1FF29 141.83%);
+    }
+
+    .db-chat-logo--wrapper {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+
+      > svg {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      > img {
+        position: absolute;
+        max-width: 100px;
+        min-width: 100px;
+        height: 100px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+
+      }
+
+    }
   }
 }
